packages/astro/e2e/fixtures/errors/src/components/preact/PreactSyntaxError.jsx
import { h } from 'preact';

export default function PreactSyntaxError() {
  return (<div></div></div>);
}
